client-pd.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: client-pod
  labels:
    component: web
spec:
  containers:
    - name: client
      image: stephengrider/mutli-client
      ports:
         - containerPort: 3000
