postrgress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
         - name: postgres-storage
           persistentVolumeClaim: 
              claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
          - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              # specific to posgress
              subPath: postgres
---
apiVersion: v1
kind: Service
metadata:
 name: postgres-clusterip-service
spec: 
  type: ClusterIP
  selector:
    component: postgres
  ports:
    - port: 5432
      targetPort: 5432
