web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels: 
        component: web
    spec:
      containers:
        - name: web
          image: stephengrider/multi-client
          ports: 
          - containerPort: 3000
---
apiVersion: v1
kind: Service 
metadata:
  name: web-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000
      targetPort: 3000
